--- a/index.html
+++ b/index.html
@@ -39,9 +39,21 @@
     </section>
     <section id="categories">
         <h1>Browse the range</h1>
-        <div id="card-1" class="card" ><img src="./imgs/card-1.png"><span>Dining</span></div>
-        <div id="card-2" class="card"><img src="./imgs/card-2.png"><span>Living</span></div>
-        <div id="card-3"><img src="./imgs/card-3.png"><span>Bedroom</span></div>
+        <div class="container">
+            <div class="row row-cols-3 g-3">
+                <div class="col">
+                    <div id="card-1" class="card"><img class="card-category" src="./imgs/card-1.png"><span class="card-title"><h1>Dining</h1></span></div>
+                </div>
+                <div class="col">
+
+                    <div id="card-2" class="card"><img class="card-category" src="./imgs/card-2.png"><span class="card-title"><h1>Living</h1></span></div>
+                </div>
+                <div class="col">
+
+                    <div id="card-3" class="card "><img class="card-category" src="./imgs/card-3.png"><span class="card-title"><h1>Bedroom</h1></span></div>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="product-showcase">
         <h1>Our Products</h1>
@@ -89,7 +101,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card" >
+                    <div class="card">
                         <img src="./imgs/producto-5.png" class="card-img-top" alt="...">
                         <div class="card-body" style="background-color: #F4F4F6;">
                             <h5 class="card-title">Syltherine</h5>
