--- a/index.html
+++ b/index.html
@@ -18,18 +18,10 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div id="nav-bar-left" class="navbar-brand"><img src="./imgs/icono/icono.png"><span id="title">Furniro</span>
-        </div>
-        <div id="nav-bar-center" class="navbar-brand">
-            <ul>
-                <li>Home</li>
-                <li>Shop</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-        <div id="nav-bar-right"><img src="./imgs/icono/lupa.png" alt="lupa"><img src="./imgs/icono/corazon.png"
-                alt="corazon"><img src="./imgs/icono/carrito.png" alt="carrito"></div>
+        <a class="navbar-brand" href="#">
+            <img src="./imgs/icono/icono.png"  class="d-inline-block align-top" alt="">
+            <h1>Furniro</h1>
+        </a>
     </nav>
     <header id="landing-image">
 
@@ -38,19 +30,19 @@
         <span> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
     </section>
     <section id="categories">
-        <h1>Browse the range</h1>
-        <div class="container">
-            <div class="row row-cols-3 g-3">
+        <h1 id="categories-slogan" class="text-center">Browse the range</h1>
+        <div class="container-fluid">
+            <div class="row row-cols-3">
                 <div class="col">
-                    <div id="card-1" class="card"><img class="card-category" src="./imgs/card-1.png"><span class="card-title"><h1>Dining</h1></span></div>
+                    <div id="card-1" class="card category"><img class="card-category" src="./imgs/card-1.png"><span class="card-title"><h1>Dining</h1></span></div>
                 </div>
                 <div class="col">
 
-                    <div id="card-2" class="card"><img class="card-category" src="./imgs/card-2.png"><span class="card-title"><h1>Living</h1></span></div>
+                    <div id="card-2" class="card category"><img class="card-category" src="./imgs/card-2.png"><span class="card-title"><h1>Living</h1></span></div>
                 </div>
                 <div class="col">
 
-                    <div id="card-3" class="card "><img class="card-category" src="./imgs/card-3.png"><span class="card-title"><h1>Bedroom</h1></span></div>
+                    <div id="card-3" class="card category"><img class="card-category" src="./imgs/card-3.png"><span class="card-title"><h1>Bedroom</h1></span></div>
                 </div>
             </div>
         </div>
