Añade tweaks finales
Corrige texto y tamaños

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
     </nav>
     <header id="landing-image">
-
+        <div></div>
     </header>
     <section id="subtext">
         <span> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
